# multi_purpose_mpc_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml  setup.cfg
config/: config.yaml  sim_config.yaml
launch/: mpc_controller.launch.xml  mpc_simulation.launch.py  mpc_simulation.launch.xml  setup.launch.xml  test.launch.xml
maps/: create_obstacles.bash  create_waypoints.bash  optimized_traj.csv  optimized_traj_1.0.csv  optimized_traj_mintime.csv
multi_purpose_mpc_ros/: CMakeLists.txt  README.md  common.py  mpc_controller.py  mpc_simulation.py  obstacle_manager.py  simulation.py  simulation_logger.py
multi_purpose_mpc_ros/config/: config.yaml  ref_vel.yaml  sim_config.yaml
multi_purpose_mpc_ros/core/: MPC.py  reference_path.py  spatial_bicycle_models.py  utils.py
multi_purpose_mpc_ros/launch/: mpc_controller.launch.py  mpc_simulation.launch.py  reference_velocity_configulator.launch.py
multi_purpose_mpc_ros/maps/: create_waypoints.py  optimized_traj_mincurv.csv
multi_purpose_mpc_ros/multi_purpose_mpc_ros/: common.py  exexution_stats.py  mpc_controller.py  mpc_simulation.py  path_constraints_provider.py  reference_path_visualizer.py  simulation_logger.py  velocity_heat_odom_visualizer.py
multi_purpose_mpc_ros/resources/: requirements.txt
multi_purpose_mpc_ros/scripts/: mpc_controller  mpc_simulation  path_constraints_provider  path_constraints_provider.bash  publish_initialpose  publish_initialpose_gnss  reference_path_visualizer  reference_velocity_configulator  run_reference_path_visualizer.bash  run_reference_velocity_configulator.bash  (+1 more)
multi_purpose_mpc_ros_msgs/: CMakeLists.txt
multi_purpose_mpc_ros_trial/: CMakeLists.txt  package.xml
resources/: requirements.txt
scripts/: mpc_controller  mpc_simulation  run.bash  run_mpc_controller.bash  run_mpc_simulation.bash  simulation.bash
(+32 files in other folders)
